// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper - Demo Disabled 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-0">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">禁用</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper disabled">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="number" size="2" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`Stepper - Demo Minimum is -12 and maximum is 18 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-2">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">最小值-12，最大值18</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="number" size="2" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`Stepper - Demo Minimum is 4 which is greater than default 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-4">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">最小值4大于默认值</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="number" size="2" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`Stepper - Demo Readonly 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-1">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">只读</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="number" size="2" readOnly="true" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`Stepper - Demo Step 2 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-3">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">步进2, 只允许输入整数</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="tel" size="2" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;

exports[`Stepper - Demo Step is a decimal, 1.3 1`] = `
<div class="md-example-child md-example-child-stepper md-example-child-stepper-5">
  <fieldset class="md-field">
    <!---->
    <div class="md-field-content">
      <div class="md-field-item is-browser">
        <div class="md-field-item-content"><label class="md-field-item-title">step为小数1.3</label>
          <!---->
          <div class="md-field-item-control">
            <!---->
          </div>
          <div class="md-field-item-right">
            <div class="md-stepper">
              <div class="md-stepper-button md-stepper-button-reduce"></div>
              <div class="md-stepper-number"><input type="number" size="2" value="0"></div>
              <div class="md-stepper-button md-stepper-button-add"></div>
            </div>
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
</div>
`;
